pkg/lang/syntax/testdata/ub/validate/valid/stack/configuration-local-reference.ub
stack: {
  locals: {
    region: 'us-east-1'
  }
  factory: {
    inputs: {
      aws-config: { region: local.region }
    }
  }
  state: local {}
  encryption: noop {}
}
