pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/local-object.ub
factory: {
  locals: {
    cfg: {
      region: 'us-east-1'
      region: 'us-west-2'
    }
  }
}
